feat: Tudo que eu tenho

--- a/angular.json
+++ b/angular.json
@@ -43,9 +43,21 @@
                   "maximumError": "8kB"
                 }
               ],
+              "fileReplacements": [
+                {
+                  "replace": "src/app/env/env.ts",
+                  "with": "src/app/env/env.production.ts"
+                }
+              ],
               "outputHashing": "all"
             },
             "development": {
+              "fileReplacements": [
+                {
+                  "replace": "src/app/env/env.ts",
+                  "with": "src/app/env/env.development.ts"
+                }
+              ],
               "optimization": false,
               "extractLicenses": false,
               "sourceMap": true
